# Bilgisayar-ve-A--G-venli-i-Ders

./: CMakeLists.txt  Hafta11-Substitutions.cpp  affine_sifreleme_hafta12  affine_sifreleme_hafta12.c  cevirme.c  hill_cipher.c  matrisToplam  matrisToplam.c  matris_carpim.c  matris_toplam.c  sezar.c  viegenere_algoritma-28.12.2020  viegenere_algoritma-28.12.2020.c
